<resources>
    <string name="app_name">Calanoc_EX2</string>
    <string name="app_title">THE LATEST MUSIC SCENE</string>
    <string name="storyTitle1">Harvard, University of Florida Are Latest Schools to Offer Course on Taylor Swift</string>
    <string name="storyTitle2">‘I feel like I’m going to wake up any minute now’ – Ed Sheeran picks Donegal school for latest album’s music video</string>
    <string name="buttonText">FULL STORY</string>
    <string name="authorDateText1">Jaelani Williams - November 29, 2023</string>
    <string name="authorDateText2">Maeve McTaggart - November 28, 2023</string>
    <string name="storyContent1">
        Next spring, Ivy League institution Harvard, and the University of Florida will offer courses that focus on Swift, titled “Taylor Swift and Her World” and “Musical Storytelling With Taylor Swift and other Iconic Female Artists,” respectively. The courses come on the heels of a massive year for Swift, who ends the global Eras Tour next December.\n\n
        In Harvard\'s English department, instructor Stephanie Burt will concentrate on "fan culture, celebrity culture, adolescence, adulthood and appropriation," while also recognizing Swift\'s musical precursors like Dolly Parton. "We will move through Swift\'s own catalogue, including hits, deep cuts, outtakes, re-recordings, considering songwriting as its own art, distinct from poems recited or silently read," the course description states.\n\n
        At UF, English faculty instructor Melina Jimenez will lead the (Un)Common course through Swift\'s "evergreen songwriting, and draw parallels between Swift’s enchanting lyrics and works by other famous female masterminds such as Aretha Franklin, Billie Holiday, and Dolly Parton." Additionally, Cuban music icon Gloria Estefan will also be discussed, and students will get to see the musical On Your Feet!\n\n
        Other Swifie courses have popped up in the past few years at institutions like Arizona State University, UC Berkeley, University of Texas, and Stanford University. Last year, the 12-time Grammy Award-winner spoke at New York University\'s commencent ceremony, while also earning an honorary doctorate from school.
    </string>
    <string name="storyContent2">
        A music video made by a group of Donegal students has been hand-picked by Ed Sheeran to accompany his newest album.\n
        Finn Valley College in Stranorlar are one of the fourteen entrants from across the world chosen to create a video to accompany Sheeran’s latest album ‘Autumn Variations’.\n\n
        Record label Warner Brothers Music got in touch after teacher Edel Temple submitted the application “there and then” when she saw the call-out on Instagram.\n
        "I feel like I’m going to wake up any minute now and it will be like one of those essays: ‘It was all a dream...’” she told the Irish Independent.\n\nThey made efforts to keep production “as quiet as possible” in case the arrival of a professional camera crew – who were recruited to help film the ‘Magical’ music video – put too much pressure on talented students.\n\n“They thought they were making a promotional video for a music competition… we had actually already won.”\n\nMs Temple said there were “a lot of teenage screams” when the scale of their project was revealed.\n\n"It started with silence and then it descended into chaos. It’s not very often one of these once-in-a-lifetime opportunities come along and they were gobsmacked. It’s a memory for them that they’ll never forget.”\n\n
        Teacher Martina Garry, who also organised the project, said there is a “real feel-good factor” to the story of the Donegal school catching the eye of Grammy-winner Ed Sheeran.\n\n
        "It gives the kids something to celebrate as it can get heavy in school with exams and assessments and assignments. There’s a real feel-good factor and positive vibes in the air today.”\n\nThe pair balanced their “day jobs” with liaising with the production team of a major record label, admitting there were “a lot of late nights” but they felt it was “worth it”.\n\n"It was one of those once-in-a-lifetime chances and we just had to throw ourselves into it and I have to say, we’re all so glad that we did.”\n\n
        Ms Garry added: “The sky is the limit. It’s out there, this music video. I mean, we’re not expecting Hollywood directors at the door anytime soon but it adds a real air of positivity to a school especially in the week before the Christmas tests get started. It’s a really welcome distraction.”\n\n
        After receiving over 4,000 entries in over 75 countries, the singer-songwriter picked 14 winners representing Ireland, United Kingdom, Australia, Italy, The Netherlands, United States, Brazil, Germany, Japan, France, New Zealand, Taiwan, Mexico, and India.
    </string>
</resources>