<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBGColor">

    <View
        android:id="@+id/card1"
        android:layout_width="367dp"
        android:layout_height="639dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardBGColor"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contentTitle1"
        android:layout_width="346dp"
        android:layout_height="86dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/source_serif_bold"
        android:text="@string/storyTitle1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/card1"
        app:layout_constraintTop_toTopOf="@id/card1" />

    <TextView
        android:id="@+id/authorDate1"
        android:layout_width="346dp"
        android:layout_height="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:text="@string/authorDateText1"
        android:textColor="@color/authorDateColor"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/card1"
        app:layout_constraintTop_toBottomOf="@+id/contentTitle1" />

    <ScrollView
        android:id="@+id/contentParagraph1"
        android:layout_width="329dp"
        android:layout_height="484dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/card1"
        app:layout_constraintTop_toBottomOf="@id/authorDate1">

        <TextView
            android:id="@+id/textContent1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alegreya"
            android:text="@string/storyContent1"
            android:textColor="@color/black" />

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>

