<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBGColor">


    <View
        android:id="@+id/card2"
        android:layout_width="367dp"
        android:layout_height="639dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardBGColor"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contentTitle2"
        android:layout_width="341dp"
        android:layout_height="112dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/source_serif_bold"
        android:text="@string/storyTitle2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/card2"
        app:layout_constraintTop_toTopOf="@id/card2" />

    <TextView
        android:id="@+id/authorDate2"
        android:layout_width="346dp"
        android:layout_height="16dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="2dp"
        android:text="@string/authorDateText2"
        android:textColor="@color/authorDateColor"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/contentTitle2" />

    <ScrollView
        android:id="@+id/contentParagraph2"
        android:layout_width="321dp"
        android:layout_height="464dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/card2"
        app:layout_constraintTop_toBottomOf="@id/authorDate2">

        <TextView
            android:id="@+id/textContent1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/alegreya"
            android:text="@string/storyContent2"
            android:textColor="@color/black" />

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>

