<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBGColor">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/headerBGColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/headerBorder"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="325dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/source_sans"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/card1"
        android:layout_width="384dp"
        android:layout_height="298dp"
        android:layout_marginTop="12dp"
        android:background="@color/cardBGColor"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBorder" />

    <ImageView
        android:id="@+id/newsImage1"
        android:layout_width="361dp"
        android:layout_height="169dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/card1"
        app:layout_constraintTop_toTopOf="@id/card1"
        app:srcCompat="@drawable/card1_image" />

    <TextView
        android:id="@+id/News1"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/source_serif"
        android:text="@string/storyTitle1"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/card1"
        app:layout_constraintTop_toBottomOf="@+id/newsImage1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:fontFamily="@font/alegreya"
        android:text="@string/buttonText"
        android:textColor="@color/mainBGColor"
        app:layout_constraintStart_toStartOf="@id/card1"
        app:layout_constraintTop_toBottomOf="@id/News1" />

    <View
        android:id="@+id/card2"
        android:layout_width="384dp"
        android:layout_height="317dp"
        android:layout_marginTop="10dp"
        android:background="@color/cardBGColor"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1" />

    <ImageView
        android:id="@+id/newsImage2"
        android:layout_width="353dp"
        android:layout_height="177dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/card2"
        app:layout_constraintTop_toTopOf="@id/card2"
        app:srcCompat="@drawable/card2_image" />

    <TextView
        android:id="@+id/News2"
        android:layout_width="349dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/source_serif"
        android:text="@string/storyTitle2"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/newsImage2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        android:fontFamily="@font/alegreya"
        android:text="@string/buttonText"
        android:textColor="@color/mainBGColor"
        app:layout_constraintStart_toStartOf="@id/card2"
        app:layout_constraintTop_toBottomOf="@id/News2" />

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBorder" />


</androidx.constraintlayout.widget.ConstraintLayout>
